tests/test_assets/semantic/valid/expressions/comparisons.cog
test::() {
    lhs: i64 = 10;

    lhs == 10;
    lhs != 20;
    lhs < 30;
    lhs >= 5;
}