tests/test_assets/semantic/invalid/raw_pointers/null_ordering.cog
test::(pointer: i32*) -> void {
    result := pointer < null;
}
